syntax = "proto3";

option java_package = "com.vmiforall.authentication";
option java_outer_classname = "AuthenticationProto";

package authentication;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";

service AuthenticationService {

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}

  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse) {}

}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  google.rpc.Status status = 1;
  User user = 2;
}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  google.rpc.Status status = 1;
  string jwtToken = 2;
  User user = 3;
}

message User {
  string email = 1;
  google.protobuf.Timestamp creationDate = 2;
  oneof optional_lastLoginDate {
    google.protobuf.Timestamp lastLoginDate = 3;
  }
}
